--- a/index.html
+++ b/index.html
@@ -52,24 +52,49 @@
             -webkit-font-smoothing: antialiased;
         }
 
-        /* Estilo base para botões profissionais solicitados */
-        .btn-katutransport {
-            background: var(--primary);
-            color: var(--white);
-            border: none;
-            padding: 12px 24px;
-            border-radius: var(--radius-main);
-            font-family: 'Clash Display', sans-serif;
-            font-weight: 600;
-            cursor: pointer;
-            transition: var(--transition);
-        }
+       /* Botão Profissional Katutransport */
 
-        .btn-katutransport:hover {
-            background: var(--accent);
-            color: var(--primary);
-            box-shadow: var(--shadow-soft);
-        }
+.btn-katutransport {
+    background: linear-gradient(135deg, #123F6B, #0F3457);
+    color: #FFFFFF;
+    border: none;
+    padding: 14px 28px;
+    border-radius: 12px;
+    font-family: 'Clash Display', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 6px 18px rgba(18, 63, 107, 0.25);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+/* Hover elegante com cor escolar */
+.btn-katutransport:hover {
+    background: #F4C430;
+    color: #123F6B;
+    transform: translateY(-3px);
+    box-shadow: 0 10px 25px rgba(244, 196, 48, 0.35);
+}
+
+/* Efeito ao clicar */
+.btn-katutransport:active {
+    transform: scale(0.97);
+    box-shadow: 0 4px 12px rgba(18, 63, 107, 0.2);
+}
+
+/* Versão desativada */
+.btn-katutransport:disabled {
+    background: #A0A0A0;
+    cursor: not-allowed;
+    box-shadow: none;
+    opacity: 0.7;
+}
+
   /* === LOGO COLOR PALETTE === */
   --navy:#1B3A6B;      /* dark blue from logo title */
   --navy2:#243F6E;     /* slightly lighter navy */
